--- a/Webbanhang/Web.config
+++ b/Webbanhang/Web.config
@@ -5,9 +5,9 @@
   -->
 <configuration>
   <configSections>
-    <!-- For more information on Entity Framework configuration, visit http://go.microsoft.com/fwlink/?LinkID=237468 -->
+    
     <section name="entityFramework" type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
-  </configSections>
+  <!-- For more information on Entity Framework configuration, visit http://go.microsoft.com/fwlink/?LinkID=237468 --></configSections>
   <appSettings>
     <add key="webpages:Version" value="3.0.0.0" />
     <add key="webpages:Enabled" value="false" />
@@ -15,6 +15,7 @@
     <add key="UnobtrusiveJavaScriptEnabled" value="true" />
   </appSettings>
   <system.web>
+	  
     <compilation debug="true" targetFramework="4.7.2" />
     <httpRuntime targetFramework="4.7.2" />
   </system.web>
@@ -54,11 +55,7 @@
       </dependentAssembly>
     </assemblyBinding>
   </runtime>
-  <connectionStrings>
-    <add name="WebsiteE_comerenceEntities" connectionString="metadata=res://*/Context.ConnectDB.csdl|res://*/Context.ConnectDB.ssdl|res://*/Context.ConnectDB.msl;provider=System.Data.SqlClient;provider connection string='data source=.;initial catalog=&quot;WebsiteE comerence&quot;;user id=sa;password=123;MultipleActiveResultSets=True;App=EntityFramework'" providerName="System.Data.EntityClient" />
-    <add name="WebsiteBanhangEntities" connectionString="metadata=res://*/Context.ConnectDB.csdl|res://*/Context.ConnectDB.ssdl|res://*/Context.ConnectDB.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=.;initial catalog=WebsiteBanhang;user id=sa;password=123;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
-    <add name="locEntities" connectionString="metadata=res://*/Context.dbModel.csdl|res://*/Context.dbModel.ssdl|res://*/Context.dbModel.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=.;initial catalog=loc;user id=sa;password=123;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
-  </connectionStrings>
+  <connectionStrings><add name="WebsiteE_comerenceEntities" connectionString="metadata=res://*/Context.ConnectDB.csdl|res://*/Context.ConnectDB.ssdl|res://*/Context.ConnectDB.msl;provider=System.Data.SqlClient;provider connection string='data source=.;initial catalog=&quot;WebsiteE comerence&quot;;user id=sa;password=123;MultipleActiveResultSets=True;App=EntityFramework'" providerName="System.Data.EntityClient" /><add name="WebsiteBanhangEntities" connectionString="metadata=res://*/Context.ConnectDB.csdl|res://*/Context.ConnectDB.ssdl|res://*/Context.ConnectDB.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=.;initial catalog=WebsiteBanhang;user id=sa;password=123;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" /><add name="locEntities" connectionString="metadata=res://*/Context.dbModel.csdl|res://*/Context.dbModel.ssdl|res://*/Context.dbModel.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=.;initial catalog=loc;user id=sa;password=123;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" /><add name="locEntities1" connectionString="metadata=res://*/Context.dbModel.csdl|res://*/Context.dbModel.ssdl|res://*/Context.dbModel.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=.;initial catalog=loc;user id=sa;password=123;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" /></connectionStrings>
   <entityFramework>
     <defaultConnectionFactory type="System.Data.Entity.Infrastructure.LocalDbConnectionFactory, EntityFramework">
       <parameters>
